frontend/test/should_fail/exec_015.grg
using deep_model_001;

rule r(y : Bcc) : (B) {
  hom(a,b);
  a : A;
  b : B;
  modify{
    exec((c:A)=r(y));     // wrong type as return var
    return (b);
  }
}
